<resources>
    <string name="app_name">Quang Truong 3851050176</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_title">Công việc</string>
    <string name="complete_todo_activity_title">Công việc đã hoàn thành</string>
    <string name="all_tags_title">Danh mục</string>
    <string name="settings_title">Cài đặt</string>

    <string name="nav_pending_todos_text">Công việc đang làm</string>
    <string name="nav_completed_todos_text">Công việc đã hoàn thành</string>
    <string name="nav_tags_text">Danh mục công việc</string>
    <string name="nav_settings_text">Cài đặt</string>
    <string name="nav_find_on_facebook_text">Find us on Facebook</string>
    <string name="nav_find_on_github_text">Find us on Github</string>
    <string name="nav_rate_us_text">Rate us</string>
    <string name="nav_share_app_text">Share this app</string>
    <string name="nav_more_apps_text">More apps</string>

    <string name="no_pending_todo_text">Danh sách công việc đang thực hiện rỗng</string>
    <string name="pending_todo_demo_title">Pending todo demo title</string>
    <string name="pending_todo_demo_content">Pending todo demo content</string>
    <string name="tag_title_demo_text">Demo tag title</string>

    <string name="completed_todo_demo_title">Completed todo demo title</string>
    <string name="completed_todo_demo_content">Completed todo demo content</string>

    <string name="todo_info_demo_tag_text">Programming</string>
    <string name="todo_info_demo_date_text">25 Dec, 2017</string>
    <string name="todo_info_demo_time_from_text">10:20 AM</string>

    <string name="no_completed_todo_text">Danh sách công việc hoàn thành rỗng</string>
    <string name="no_tags_available_text">Danh mục rỗng</string>

    <string name="option_completed_search_text">Tìm kiếm</string>
    <string name="option_completed_delete_text">Xóa toàn bộ</string>
    <string name="option_completed_settings_text">Cài đặt</string>

    <string name="option_tags_search_text">Tìm kiếm</string>
    <string name="option_tag_settings_text">Cài đặt</string>
    <string name="option_save_todo_text">Lưu</string>
    <string name="option_tag_edit_text">Sửa</string>
    <string name="option_tag_del_text">Xóa</string>

    <string name="option_pending_search_text">Tìm kiếm</string>
    <string name="option_pending_completed_text">Công việc đã hoàn thành</string>
    <string name="option_pending_settings_text">Cài đặt</string>
    <string name="option_all_tags_text">Danh mục</string>

    <string name="add_todo_dialog_title">Thêm công việc</string>
    <string name="save_todo_dialog_title">Lưu công việc</string>
    <string name="edit_todo_dialog_title">Sửa công việc</string>
    <string name="todo_title_hint">Nhập tiêu đề công việc</string>
    <string name="todo_content_hint">Nhập mô tả công việc</string>
    <string name="todo_date_hint">Nhập ngày</string>
    <string name="todo_time_hint">Nhập giờ</string>
    <string name="add_todo_dialog_positive_text">Thêm công việc</string>
    <string name="add_todo_dialog_cancel_text">Hủy</string>
    <string name="todo_title_add_success_msg">Thêm công việc thành công</string>

    <string name="add_tag_dialog_title">Thêm danh mục</string>
    <string name="edit_tag_dialog_title">Sửa danh mục</string>
    <string name="add_tag_dialog_positive_text">Thêm danh mục</string>
    <string name="edit_tag_dialog_positive_text">Sửa</string>
    <string name="add_tag_dialog_cancel_text">Hủy</string>
    <string name="add_tag_text_text_color_text">Tag Text Color</string>
    <string name="add_tag_text_background_color_text">Tag Background Color</string>
    <string name="tag_title_add_success_msg">Đã thêm danh mục</string>
    <string name="tag_delete_dialog_title">Xác nhận xóa</string>
    <string name="tag_delete_dialog_msg">Bạn có chắc muốn xóa</string>
    <string name="tag_delete_cancel">Hủy</string>
    <string name="tag_delete_yes">Xóa</string>
    <string name="tag_deleted_success">Đã xóa danh mục</string>
    <string name="tag_no_delete">Xóa danh mục thất bại</string>
    <string name="edit_tag_dialog_cancel_text">Hủy</string>
    <string name="tag_edit_yes">Xác nhận</string>
    <string name="tag_edit_cancel">Hủy</string>
    <string name="tag_saved_success">Lưu thành công !</string>
    <string name="tag_no_save">Lưu thất bại</string>
    <string name="tag_create_dialog_title_text">Thêm danh mục</string>
    <string name="no_tag_in_the_db_text">Chưa có danh mục công việc. Hãy tạo danh mục công việc</string>
    <string name="create_new_tag">Tạo mới danh mục</string>


    <string name="tag_title_hint">Tên danh mục</string>
    <string name="edit_tag_title_hint">Nhập tên danh mục</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>