<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/option_completed_search_text"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_delete_completed_todos"
        android:title="@string/option_completed_delete_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_white_settings"
        android:title="@string/option_completed_settings_text"
        app:showAsAction="never" />
</menu>