<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_todo_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/add_new_todo_dialog_title_padding"
            android:text="@string/edit_todo_dialog_title"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/new_todo_container_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_description_24"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_edit_24"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/todo_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundTint="@color/colorPrimary"
                android:padding="@dimen/input_padding"
                android:textColorHint="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="@dimen/drawable_input_padding"
                    android:padding="@dimen/input_padding" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/todo_dialog_linear_margin_top"
                android:layout_marginRight="@dimen/todo_dialog_linear_margin_right"
                android:layout_marginBottom="@dimen/todo_dialog_linear_margin_bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_todo_dialog_cancel_text"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/add_new_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/todo_dialog_add_margin_left"
                    android:text="@string/save_todo_dialog_title"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
